--- a/IE307_CNLTDaNenTangChoUDD/seminar/listViewComponents/package.json
+++ b/IE307_CNLTDaNenTangChoUDD/seminar/listViewComponents/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.0",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-timeline-flatlist": "^0.8.0"
   },
